  of characters that are drawn as overlapping with the "\l" function.
* troff/dpost: Embed TrueType fonts without a PostScript field correctly
  (bug reported by FENG Yu Ning).
* troff/dpost: Include the last character in a TrueType "post" 2.0 table
  which was previously omitted; same for the last entry of the last subtable
  in the "cmap" table (patch by Matthew Fischer).
* troff: Do not apply font-specific character translation inside \D,
  which led to wrong output e.g. with \D'l' with an OpenType font with
  the small caps feature activated (bug reported by Russ Cox).
* troff: The "\X" and "\Y" escape sequences are no longer interpreted
  in copy mode, as there is no case when this would be useful, and the
  behavior now matches groff and Plan 9 troff (thanks to Russ Cox).
* dpost: Fixed a case in which invalid backslash sequences were generated
  when insane sizes appeared in intermediate troff input (bug reported by
  Russ Cox).
* refer: The "-p" option now works with files that are not in the
  current directory (bug reported by Michael Piotrowski).
* lookbib: This version does not support the "-n" option, which was
  described in the BSD-derived manual page (thanks to Michael Piotrowski).
* [nt]roff: Do not go into an infinite loop if a tab character appears in
  the arguments to ".warn" (bug reported by Russ Cox).

Release 080407
* [nt]roff: A type definition problem that caused an endless loop on
  64-bit systems has been fixed.
* [nt]roff: The ".warn" request now accepts full numeric expressions
  instead of plain numbers only.
* -mg macros: When reading the output of "ls" to emulate ".mso", use
  nofill mode to avoid artifacts from paragraph adjustment that cause
  the request to fail.
* eqn: Before an equation or binary operator, print a "\|" instead of
  a "\^" if the preceding character is italic. The previous behavior
  resulted from a too far-reaching change in release 051107. (Bug
  reported by Joerg van den Hoff.)